# m2fs

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  TODO  config.example.py  config.py  log.py  logger.py  m2fs.spec  midi.py  midi2sim.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: build_win64.yaml
configurations/behringer/: xtouch_mini.py
configurations/behringer/xtouch_mini/: airbus_a20n.py  cessna_c25c.py
configurations/deprecated/arturia/minilab_mk2/: wt_cj4_config.py
examples/: arturia_minilab_mk2.py  generic.py
examples/arturia/: minilab_mk2.py
examples/arturia/minilab_mk2/: wt_cj4_config.py
flightsim/: __init__.py  events.py  log.py  poll.py  sim.py  variables.py  watch.py
m2fs/: __init__.py  __main__.py  cli.py  config.py  dist.py  log.py  logger.py
m2fs/midi/: __init__.py  cc.py  exceptions.py  midi.py  note.py  pitchwheel.py  port.py
m2fs/simc/: __init__.py  backend.py  client.py  events.py  poll.py  variables.py
m2fs/simc/mobiflight/: __init__.py  mobiflight_variable_requests.py
m2fs/utils/: __init__.py  arturia.py  behringer.py  encoder.py  event.py  note.py
midi/: __init__.py  cc.py  log.py  message.py  midi.py  note.py  port.py  util.py
midi2sim/: README.md  __init__.py  __main__.py  cli.py  config.py  dist.py  logger.py
midi2sim/flightsim/: events.py
midi2sim/midi/: __init__.py  log.py  message.py  midi.py  pitchwheel.py  port.py
midi2sim/simc/: __init__.py  client.py  const.py  events.py  log.py  poll.py  sim.py  variables.py
midi2sim/utils/: __init__.py  arturia.py
sim/: __init__.py  sim.py
tests/: test_simc_variables.py
windows/: m2fs.win64.py
